# Sheeko

./: .gitignore  CLAUDE.md  Cargo.toml  PDR.md  README.md
src/: gateway.rs  lib.rs  telemetry.rs
src/common/: jitter.rs  message.rs  mod.rs  opus_codec.rs  packet.rs
src/ecs/: commands.rs  components.rs  mod.rs  world.rs
src/ecs/systems/: audio_forward.rs  device_switch.rs  mod.rs  presence.rs  text_broadcast.rs
tests/: device_switch.rs  ecs_forward.rs  ws_chat.rs
